# dynamic_sankey

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: 01_basic.html  02_energiemix.html  03_customer_journey.html  04_smart_building.html
examples/01_basic/: config.py  generate.py
examples/02_energiemix/: config.py  generate.py
examples/03_customer_journey/: config.py  generate.py
examples/04_smart_building/: config.py  generate.py
src/dynamic_sankey/: __init__.py  generator.py
